# PyMANIPULATE-2020

./: .gitignore  README.md
input/: example_resp_unc_spectrum_averaged_response  manipulate-2020.prl  manipulate_loop.bat  manipulate_loop.prl
output/: example_Ag109g_IRDFF-II_cor_plot_interface  example_Ag109g_IRDFF-II_cor_plot_interface.std_pct_plt  example_Co59g_IRDFF-II_cor_plot_interface.corplt  example_Co59g_IRDFF-II_cor_plot_interface.std_pct_plt  example_NJOY_groupr_convert.ext  example_NJOY_groupr_spectrum_convert.ext  example_S32p_IRDFF-II_cor_plot_interface  example_S32p_IRDFF-II_cor_plot_interface.std_pct_plt  example_composite_uncertainty.ext  example_resp_unc_spectrum_averaged_response.ext
python_port/: README.md  pyproject.toml
python_port/preliminary_validation/: README.md
python_port/src/manipulate_py/: __init__.py  cli.py  covariance.py  formats.py  legacy_input.py  models.py  paths.py  runner.py  runtime.py  utils.py
python_port/tests/: test_examples.py
python_port/tools/: run_preliminary_validation.py
response/: As-75_SA_in_GaAs_ENDFB_VIII_0_770grp_DK_NJOY2016.444  IAEA725.nrg  Ni58_103_IRDFF-II.103  S32p_IRDFF-II_640grp.103  nuget49.nrg
source/: cov_combine.f  cov_norm.f  df.f  dummy.f  eigen_out.f  file_name_logic.add  force_upper.f  infcntl.cmn  location.cmn  manipulate.f  mpicom.cmn  mpif.h  prune.f  schdc.f  sgeev.f  spectra_format.f  stat.f  xerhlt.f
spectrum/: 14MeV.frac  14MeV_plus_room_return.list  ACRR-CdPoly_baseline.adj_trial_frac  ACRR-FF-CC_baseline.adj_trial_frac  ACRR-FRECII-FF_prelim.adj_trial_frac  Maxwellian_20.frac  (+10 more)
(+36 files in other folders)
