[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manipulate-python"
version = "0.1.0"
description = "Python reimplementation of the MANIPULATE-2020 FORTRAN workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
]

[project.scripts]
manipulate-python = "manipulate_py.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
